--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
     "jest": "^24.9.0"
+  },
+  "jest": {
+    "testMatch": [
+      "**/0x00-ES6_basic/tests/**/*.test.js",
+      "**/0x00-ES6_basic/tests/**/*.spec.js"
+    ],
+    "testPathIgnorePatterns": [
+      "\\\\node_modules\\\\"
+    ]
   }
 }
